<resources>
  <string name="app_name">Sales Edge</string>
  <string name="barcode">Barcode</string>
  <string name="scan_barcode">6 Scan Barcode</string>
  <string name="cust_contact">Contact List</string>
  <string name="read_qr_code">3 Scan QRCode</string>
  <string name="take_photo_1">1 Photo +</string>
  <string name="take_photo_2">2 Photo -</string>
  <string name="action_save">Save</string>
  <string name="action_print">Print</string>
  <string name="action_add">New</string>
  <string name="action_preview">Preview</string>
  <string name="action_upload">Upload</string>
  <string name="action_bind_bt_printer">Bluetooth</string>
  <string name="prod">Item:</string>
  <string name="qr_card">Client:</string>
  <string name="save_record">Save</string>
  <string name="bind_bt_printer">Printer</string>
  <string name="hint_enable_bluetooth">Turn on bluetooth</string>
  <string name="card1">Photo +</string>
  <string name="card2">Photo -</string>
  <string name="pls_input_data">Entry first</string>
  <string name="action_update_prod">Show Room</string>
  <string name="update_prod">Show Room</string>
  <string name="hint_prod_image">Click Photo</string>
  <string name="action_re_take_photo">Take Photo</string>
  <string name="action_re_uplaod">Up Load</string>
  <string name="hint_product_spec">Description</string>
  <string name="agreement"><b>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  </b>\n\n
  YOU MAY UPLOAD ALL YOUR DATA TO LEDWAY CLOUD SERVICE TO ENABLE SAMPLES SHARING.</string>
  <string name="title_agreement">Authorize</string>
  <string name="btn_agree">Agree</string>
  <string name="loading">Loading…</string>
  <string name="prod_exists">Duplicated</string>
  <string name="title_my_business_card">My</string>
  <string name="action_my_business_card">My</string>
  <string name="default_my_business_card">The data entry here will be converted to QRCode
  </string>
  <string name="title_new_version">New version found</string>
  <string name="btn_install">Install</string>

  <string name="message_find_latest_version">New version found</string>
  <string name="btn_cancel">Cancel</string>
  <string name="btn_upgrade">Download</string>
  <string name="today">Today</string>
  <string name="titile_id">My ID</string>
  <string name="titile_share_app">App</string>
  <string name="share_to">4 Scan ID</string>
  <string name="input_barcode">5 Entry Code</string>
  <string name="share_to_title">Recv.ID:</string>
  <string name="data_from">Sender:</string>
  <string name="my_sample">Sales Leads</string>
  <string name="my_list">My List</string>
  <string name="title_receive_sample">Received Sample</string>
  <string name="no_image">No Photo</string>
  <string name="action_data_list">Show Room</string>
  <string name="action_sample_track">Tracking</string>
  <string name="product">Show Room</string>
  <string name="business_hint">Click to image Business Card</string>
  <string name="hint_share_to">Click to Scan ShareToID</string>
  <string name="my">My</string>
  <string name="customer">Customer</string>
  <string name="formater_selected">%1$d item(s) selected</string>
  <string name="formater_sample_title">%1$s</string>
  <string name="share">Share</string>
  <string name="my_qrcode">My QRCode</string>
  <string name="input_product_number">Input Product No.</string>
  <string name="input_hint_product_no">Product No.</string>
  <string name="install_app_before_sharing">Install app before sharing</string>
  <string name="sample_will_sent_to_this_phone">Samples will be sent to this phone by scanning QRCODE below.</string>
  <string name="delete">Delete</string>
  <string name="help_share_to">Scan another phone\'s MY ID to send the samples</string>
  <string name="pa">PA</string>
  <string name="not_found_data">Not found data</string>

  <string name="scan_master">Scan Master</string>
  <string name="received">Received</string>
  <string name="are_you_sure_to_exit">Are you sure to exit</string>
  <string name="hint_clear_business_card_hint_first">Please clear business card memo</string>
  <string name="ocr_count_limit">OCR has been used %1$d time(s) (Limit:%2$d) </string>
  <string name="hint_clear_description">Please clear description</string>
  <string name="delete_all">Delete All</string>
  <string name="download_from_group">Download Group Product</string>
  <string name="show_room">Show room</string>
  <string name="exhibition">Exhibition</string>
  <string name="empty_sample_hint">Please click plus sign</string>
  <string name="fail_grant">Fail to grant permissions</string>
  <string name="re_grant">Re-grant</string>
  <string name="re_grant_message">The permissions are required.</string>
  <string name="app_setting">App Settings</string>
  <string name="hint_filter_product">Input text to filter show rooms</string>
  <string name="success_add">Success to add</string>
  <string name="wish_list">Wish List</string>
    <string name="action_link">Link</string>
    <string name="scan_qrcode">Please scan QRCODE below</string>
  <string name="removed_group_product">The Products of  group have been disabled</string>
  <string name="removed_group_received">The samples of group have been disabled</string>
    <string name="change">Change</string>
</resources>
