<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

  <item
      android:id="@+id/action_sample"
      android:icon="@drawable/ic_business_center_black_24dp"
      android:orderInCategory="0"
      android:title="@string/my_sample"
      />

  <item
      android:id="@+id/action_receive_sample"
      android:icon="@drawable/ic_business_center_black_24dp"
      android:orderInCategory="1"
      android:title="@string/title_receive_sample"
      />

  <item
      android:id="@+id/action_product"
      android:icon="@drawable/ic_grid_on_black_24dp"
      android:orderInCategory="2"
      android:title="@string/product"
      />

  <item
      android:id="@+id/action_my_account"
      android:icon="@drawable/ic_account_box_black_24dp"
      android:orderInCategory="3"
      android:title="@string/my_qrcode"
      />
  <item
      android:id="@+id/action_my_webview"
      android:icon="@drawable/ic_web_black_24dp"
      android:orderInCategory="4"
      android:title="@string/pa"
      />


</menu>