<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/action_print_preview"
    android:orderInCategory="100"
    android:title="@string/action_preview"
      android:icon="@drawable/ic_presentation"
      android:visible="false"
    app:showAsAction="ifRoom"/>

  <item
      android:id="@+id/action_re_take_photo"
      android:orderInCategory="100"
      android:title="@string/action_upload"
      android:icon="@drawable/ic_camera_dark"
      app:showAsAction="ifRoom"/>

  <item
      android:id="@+id/action_upload"
      android:orderInCategory="100"
      android:title="@string/action_upload"
      android:icon="@drawable/ic_cloud_upload"
      app:showAsAction="ifRoom"/>

  <item
      android:id="@+id/action_link"
      android:orderInCategory="100"
      android:title="@string/action_link"
      android:icon="@drawable/ic_action_link"
      app:showAsAction="ifRoom"/>

  <item
      android:id="@+id/action_share_to"
      android:orderInCategory="100"
      android:title="@string/share"
      android:icon="@drawable/ic_share_white_24dp"
      app:showAsAction="ifRoom"/>
</menu>